localization/v2.6.x/site/de/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: >-
  Auf dieser Seite finden Sie eine Liste von Anleitungen für die Interaktion mit
  Milvus und Tools von Drittanbietern.
title: Übersicht über Integrationen
---
<h1 id="Integrations-Overview" class="common-anchor-header">Übersicht über Integrationen<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Auf dieser Seite finden Sie eine Liste von Tutorials, die Ihnen die Interaktion mit Milvus und Tools von Drittanbietern erleichtern.</p>
<table>
<thead>
<tr><th>Lehrgang</th><th>Anwendungsfall</th><th>Partner oder Stacks</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/de/integrate_with_llamaindex.md">RAG mit Milvus und LlamaIndex</a></td><td>RAG</td><td>Milvus, LLamaIndex</td></tr>
<tr><td><a href="/docs/de/integrate_with_langchain.md">RAG mit Milvus und LangChain</a></td><td>RAG</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/de/milvus_hybrid_search_retriever.md">Milvus Hybrid Search Retriever in LangChain</a></td><td>Hybride Suche</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/de/basic_usage_langchain.md">Verwendung von Milvus als Vektorspeicher in LangChain</a></td><td>Semantische Suche</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/de/full_text_search_with_langchain.md">Verwendung der Volltextsuche mit LangChain und Milvus</a></td><td>Volltext-Suche</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/de/integrate_with_haystack.md">RAG mit Milvus und Haystack</a></td><td>RAG</td><td>Milvus, Haystack</td></tr>
<tr><td><a href="/docs/de/llamaindex_milvus_async.md">RAG mit Milvus und LlamaIndex Async API</a></td><td>Ochestration</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/de/milvus_rag_with_vllm.md">Aufbau von RAG mit Milvus, vLLM und Llama 3.1</a></td><td>RAG</td><td>Milvus, vLLM, LlamaIndex</td></tr>
<tr><td><a href="/docs/de/llamaindex_milvus_full_text_search.md">Verwendung der Volltextsuche mit LlamaIndex und Milvus</a></td><td>Volltext-Suche</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/de/dify_with_milvus.md">Einsatz von Dify mit Milvus</a></td><td>Ochestration</td><td>Milvus, Dify</td></tr>
<tr><td><a href="/docs/de/rag_with_langflow.md">Aufbau eines RAG-Systems unter Verwendung von Langflow mit Milvus</a></td><td>Ochestration</td><td>Milvus, Langflow</td></tr>
<tr><td><a href="/docs/de/use_milvus_in_private_gpt.md">Verwendung von Milvus in PrivateGPT</a></td><td>Ochestration</td><td>Vektorsuche</td></tr>
<tr><td><a href="/docs/de/use_milvus_in_docsgpt.md">Verwendung von Milvus in DocsGPT</a></td><td>Ochestrierung</td><td>DocsGPT, Milvus</td></tr>
<tr><td><a href="/docs/de/use_milvus_with_sambanova.md">Verwendung von Milvus mit SambaNova</a></td><td>Orchestrierung</td><td>Milvus, SambaNova</td></tr>
<tr><td><a href="/docs/de/milvus_rag_with_dynamiq.md">Erste Schritte mit Dynamiq und Milvus</a></td><td>Orchestrierung</td><td>Milvus, Dynamiq</td></tr>
<tr><td><a href="/docs/de/llama_stack_with_milvus.md">RAG mit Llama Stack mit Milvus aufbauen</a></td><td>Orchestrierung</td><td>Milvus, Llama Stack</td></tr>
<tr><td><a href="/docs/de/integrate_with_memgpt.md">Chatbot-Agent mit Milvus und MemGPT</a></td><td>Agent</td><td>Milvus, MemGPT</td></tr>
<tr><td><a href="/docs/de/llama_agents_metadata.md">Multiagentensysteme mit Mistral AI, Milvus und Llama-Agenten</a></td><td>Agent</td><td>Milvus, Mistral AI, LlamaIndex</td></tr>
<tr><td><a href="/docs/de/quickstart_mem0_with_milvus.md">Erste Schritte mit Mem0 und Milvus</a></td><td>Agenten</td><td>Mem0, Milvus</td></tr>
<tr><td><a href="/docs/de/integrate_with_agno.md">Integration von Milvus mit Agno</a></td><td>Agenten</td><td>Milvus, Agno</td></tr>
<tr><td><a href="/docs/de/milvus_and_mcp.md">MCP + Milvus: Verknüpfung von KI mit Vektordatenbanken</a></td><td>Agenten</td><td>Milvus, MCP</td></tr>
<tr><td><a href="/docs/de/openai_agents_milvus.md">Milvus-Integration mit OpenAI-Agenten: Eine Schritt-für-Schritt-Anleitung</a></td><td>Agenten</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/de/integrate_with_ragas.md">RAG-Auswertung mit Ragas und Milvus</a></td><td>Auswertung</td><td>Milvus, Ragas</td></tr>
<tr><td><a href="/docs/de/evaluation_with_deepeval.md">Auswertung mit DeepEval</a></td><td>Bewertung &amp; Beobachtbarkeit</td><td>Milvus, DeepEval</td></tr>
<tr><td><a href="/docs/de/evaluation_with_phoenix.md">Auswertung mit Arize Pheonix</a></td><td>Bewertung &amp; Beobachtbarkeit</td><td>Milvus, Arize Pheonix</td></tr>
<tr><td><a href="/docs/de/integrate_with_langfuse.md">Milvus in Langfuse</a></td><td>Beobachtbarkeit</td><td>Milvus, Langfuse</td></tr>
<tr><td><a href="/docs/de/integrate_with_openai.md">Semantische Suche mit Milvus und OpenAI</a></td><td>Semantische Suche</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/de/integrate_with_cohere.md">Fragenbeantwortung mit Milvus und Cohere</a></td><td>Semantische Suche</td><td>Milvus, Cohere</td></tr>
<tr><td><a href="/docs/de/integrate_with_hugging-face.md">Beantwortung von Fragen mit Milvus und HuggingFace</a></td><td>Beantwortung von Fragen</td><td>Milvus, HuggingFace</td></tr>
<tr><td><a href="/docs/de/integrate_with_pytorch.md">Bildsuche mit Milvus und Pytorch</a></td><td>Semantische Suche</td><td>Milvus, Pytorch</td></tr>
<tr><td><a href="/docs/de/integrate_with_sentencetransformers.md">Filmsuche mit Milvus und SentenceTransfromers</a></td><td>Semantische Suche</td><td>Milvus, SatzTransformatoren</td></tr>
<tr><td><a href="/docs/de/integrate_with_voxel51.md">Vision Searches mit Milvus und FiftyOne durchführen</a></td><td>Semantische Suche</td><td>Milvus, FiftyOne</td></tr>
<tr><td><a href="/docs/de/integrate_with_voyageai.md">Semantische Suche mit Milvus und VoyageAI</a></td><td>Semantische Suche</td><td>Milvus, VoyageAI</td></tr>
<tr><td><a href="/docs/de/integrate_with_bentoml.md">RAG mit Milvus und BentoML</a></td><td>RAG</td><td>Milvus, BentoML</td></tr>
<tr><td><a href="/docs/de/integrate_with_dspy.md">RAG mit Milvus und DSPy</a></td><td>RAG</td><td>Milvus, DSPy</td></tr>
<tr><td><a href="/docs/de/integrate_with_jina.md">Semantische Suche mit Milvus und Jina</a></td><td>Semantische Suche</td><td>Milvus, Jina</td></tr>
<tr><td><a href="/docs/de/integrate_with_snowpark.md">Milvus auf Snowpark Container Diensten</a></td><td>Datenverbindung</td><td>Milvus, Snowpark</td></tr>
<tr><td><a href="/docs/de/integrate_with_whyhow.md">Regelbasiertes Retrieval mit Milvus und WhyHow</a></td><td>Beantwortung von Fragen</td><td>Milvus, WhyHow</td></tr>
<tr><td><a href="/docs/de/integrate_with_fastgpt.md">Wie man FastGPT mit Milvus einsetzt</a></td><td>RAG</td><td>Milvus, FastGPT</td></tr>
<tr><td><a href="/docs/de/integrate_with_vanna.md">SQL schreiben mit Vanna und Milvus</a></td><td>RAG</td><td>Milvus, Vanna</td></tr>
<tr><td><a href="/docs/de/integrate_with_camel.md">RAG mit Milvus und Camel</a></td><td>RAG</td><td>Milvus, Camel</td></tr>
<tr><td><a href="/docs/de/integrate_with_airbyte.md">Airbyte &amp; Milvus: Open-Source-Infrastruktur für den Datenverkehr</a></td><td>Datenverbindung</td><td>Milvus, Airbyte</td></tr>
<tr><td><a href="/docs/de/video_search_with_twelvelabs_and_milvus.md">Erweiterte Videosuche: Nutzung von Twelve Labs und Milvus für die semantische Suche</a></td><td>Semantische Suche</td><td>Milvus, Zwölf Labs</td></tr>
<tr><td><a href="/docs/de/kafka-connect-milvus.md">Kafka mit Milvus verbinden</a></td><td>Daten-Quellen</td><td>Milvus, Kafka</td></tr>
<tr><td><a href="/docs/de/kotaemon_with_milvus.md">Kotaemon RAG mit Milvus verbinden</a></td><td>RAG</td><td>Milvus, Kotaemon</td></tr>
<tr><td><a href="/docs/de/apify_milvus_rag.md">Retrieval-erweiterte Generierung: Crawlen von Websites mit Apify und Speichern der Daten in Milvus zur Beantwortung von Fragen</a></td><td>Daten-Quellen</td><td>Milvus, Apify</td></tr>
<tr><td><a href="/docs/de/build_rag_on_arm.md">RAG auf Arm-Architektur aufbauen</a></td><td>RAG</td><td>Milvus, Arm</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_fireworks.md">Aufbau von RAG mit Milvus und Fireworks AI</a></td><td>LLMs</td><td>Milvus, Feuerwerkskörper-KI</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_lepton.md">Bauen Sie eine RAG mit Milvus und Lepton AI</a></td><td>LLMs</td><td>Milvus, Lepton AI</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_siliconflow.md">Aufbau von RAG mit Milvus und SiliconFlow</a></td><td>LLMs</td><td>Milvus, SiliconFlow</td></tr>
<tr><td><a href="/docs/de/rag_with_milvus_and_unstructured.md">Erstellen einer RAG mit Milvus und unstrukturierten</a></td><td>Datenquellen</td><td>Milvus, Unstrukturiert</td></tr>
<tr><td><a href="/docs/de/RAG_with_pii_and_milvus.md">Aufbau einer RAG mit Milvus + PII Masker</a></td><td>Datenquellen</td><td>Milvus, PII-Masker</td></tr>
<tr><td><a href="/docs/de/knowledge_table_with_milvus.md">Wissenstabelle mit Milvus</a></td><td>Wissenstechnik</td><td>Wissenstabelle, Milvus</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_cognee.md">RAG aufbauen mit Milvus und Cognee</a></td><td>Wissenstechnik</td><td>Milvus, Cognee</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_gemini.md">Aufbau von RAG mit Milvus und Gemini</a></td><td>LLMs</td><td>Milvus, Gemini</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_ollama.md">Aufbau von RAG mit Milvus und Ollama</a></td><td>LLMs</td><td>Milvus, Ollama</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_deepseek.md">Aufbau von RAG mit Milvus und DeepSeek</a></td><td>LLMs</td><td>Milvus, DeepSeek</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_crawl4ai.md">Aufbau von RAG mit Milvus und Crawl4AI</a></td><td>Daten-Quellen</td><td>Milvus, Crawl4AI</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_firecrawl.md">Aufbau von RAG mit Milvus und Firecrawl</a></td><td>Die Datenquellen</td><td>Milvus, Firecrawl</td></tr>
<tr><td><a href="/docs/de/integration_with_mindsdb.md">Integration von Milvus mit MindsDB</a></td><td>Wissensmanagement</td><td>Milvus, MindsDB</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_feast.md">RAG mit Milvus und Feast aufbauen</a></td><td>Daten-Quellen</td><td>Milvus, Feast</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_docling.md">Aufbau von RAG mit Milvus und Docling</a></td><td>Datenquellen</td><td>Milvus, Docling</td></tr>
<tr><td><a href="/docs/de/build_RAG_with_milvus_and_embedAnything.md">Aufbau von RAG mit Milvus und EmbedAnything</a></td><td>Einbetten von</td><td>Milvus, EmbedAnything</td></tr>
<tr><td><a href="/docs/de/milvus_and_n8n.md">Erste Schritte mit Milvus und n8n</a></td><td>Orchestrierung</td><td>Milvus, n8n</td></tr>
<tr><td><a href="/docs/de/use_milvus_in_anythingllm.md">Verwendung von Milvus in AnythingLLM</a></td><td>Orchestrierung</td><td>Milvus, AnythingLLM</td></tr>
<tr><td><a href="/docs/de/NLWeb_with_milvus.md">Verwendung von NLWeb mit Milvus</a></td><td>Daten-Quellen</td><td>Milvus, NLWeb</td></tr>
<tr><td><a href="/docs/de/langextract_milvus_demo.md">LangExtract + Milvus-Integration</a></td><td>Datenquellen</td><td>Milvus, LangExtract</td></tr>
<tr><td><a href="https://colab.research.google.com/drive/1bONndT8MIxJZzzV4QTpQfU-eyWdL1Q1m?usp=sharing">Semantische Suche mit ZeroEntropy und Milvus</a></td><td>Semantische Suche</td><td>Milvus, NullEntropie</td></tr>
<tr><td><a href="/docs/de/langchain_milvus_dido.md">Integration der Milvus Texteinbettungsfunktion mit LangChain</a></td><td>Text-Einbettung</td><td>Milvus, LangChain</td></tr>
<tr><td>[Aufbau eines Dual-Source RAG Agenten mit Exa und Milvus]</td><td>Datenquellen</td><td>Milvus, Exa</td></tr>
</tbody>
</table>
